--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["n03an <nouman.memon@icloud.com>"]
 readme = "README.md"
-packages = [{include = "n03an"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
